have modified home.html

--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -65,7 +65,7 @@
   <section class="jumbotron text-center">
     <div class="container">
       <h1>Hi I'm Ali </h1>
-      <p class="lead text-muted"> Hey! My name is Ali and I am a fullstack developer, and formerly a network and telecoms engineer</p>
+      <p class="lead text-muted"> Hey! I am fullstack Django/Vue developer & telecoms network engineer</p>
       <p>
         <a href="mailto:ali.omar@umbrellanetworks.net" class="btn btn-primary my-2">Email me</a>
       </p>
