added static files like resume and picture to the html file

--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -2,6 +2,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    {% load staticfiles %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -53,7 +54,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav ml-auto">
                 <a class="nav-item nav-link" href="#"> Twitter </a>
-                <a class="nav-item nav-link" href="#"> Resume </a>
+                <a class="nav-item nav-link" href="{%static 'RESUME-Ali Omar.pdf'%}"> Resume </a>
                 <a class="nav-item nav-link" href="#"> Blog </a>
               </div>
             </div>
@@ -69,6 +70,7 @@
       <p>
         <a href="mailto:ali.omar@umbrellanetworks.net" class="btn btn-primary my-2">Email me</a>
       </p>
+      <img src="{% static 'ali.jpeg' %}" height="300" />
     </div>
   </section>
 
