did the polishing of blog posts and details

--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -2,12 +2,13 @@
 <!doctype html>
 <html lang="en">
   <head>
+    {% load staticfiles %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v3.8.6">
-    <title>Ali Omar - Django fullstack developer</title>
+    <title>Ali Omar - my scratchie blog</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/album/">
 
@@ -45,19 +46,19 @@
   </head>
   <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Ali Omar</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav ml-auto">
-                <a class="nav-item nav-link" href="#"> Twitter </a>
-                <a class="nav-item nav-link" href="#"> Resume </a>
-                <a class="nav-item nav-link active" href="#"> Blog </a>
-              </div>
-            </div>
-          </nav>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="{% url 'home' %}">Ali Omar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ml-auto">
+            <a class="nav-item nav-link" href="https://twitter.com/" target="_blank"> Twitter </a>
+            <a class="nav-item nav-link" href="{%static 'RESUME-Ali Omar.pdf'%}" target="_blank"> Resume </a>
+            <a class="nav-item nav-link active" href="{% url 'allblogs' %}" target="_blank" > Blog </a>
+          </div>
+        </div>
+      </nav>
     </header>
 
 <main role="main">
@@ -68,7 +69,7 @@
         <h2>Latest posts</h2>
         <hr />
         {% for blog in blogs.all %}
-           <a href="" ><h3 > {{ blog.title}}</h3></a>
+           <a href="{% url 'detail' blog.id %}" ><h3 > {{ blog.title}}</h3></a>
            {{blog.pub_date_pretty}}
             <br />
             <img class="img-fluid" src="{{ blog.image.url}}" height="200" width="200">
