--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -46,15 +46,15 @@
   <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Ali Omar</a>
+            <a class="navbar-brand" href="{% url 'home' %}">Ali Omar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav ml-auto">
-                <a class="nav-item nav-link" href="#"> Twitter </a>
-                <a class="nav-item nav-link" href="{%static 'RESUME-Ali Omar.pdf'%}"> Resume </a>
-                <a class="nav-item nav-link" href="#"> Blog </a>
+                <a class="nav-item nav-link" href="https://twitter.com/" target="_blank"> Twitter </a>
+                <a class="nav-item nav-link" href="{%static 'RESUME-Ali Omar.pdf'%}" target="_blank"> Resume </a>
+                <a class="nav-item nav-link" href="{% url 'allblogs' %}" target="_blank" > Blog </a>
               </div>
             </div>
           </nav>
